Login/register/logout functionality - added some tests for the login/register/logout functionality - improved the code a little bit - updated the build script